--- a/style/styles.css
+++ b/style/styles.css
@@ -89,6 +89,7 @@ nav ul li a {
     font-weight: normal;
     color: #757575;
     margin-bottom: 30px;
+    width: 585px;
 }
 .btn-dwn-cv {
     margin-right: 30px;
