--- a/style/styles.css
+++ b/style/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 /* Multiple */
-.header {
+.bg-color {
     background-color: #FFF8F3;
 }
 .header-img {
@@ -99,4 +99,38 @@ nav ul li a {
     margin-top: 161px;
     margin-bottom: 0px;
     margin-right: 38px;
+}
+.about {
+    max-width: 1140px;
+    max-height: 550px;
+    margin: 0 auto;
+    margin: 130px 230px;
+    padding: 130px 156px;
+    border-radius: 10px;
+}
+.center {
+    text-align: center;
+}
+.about-title {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.about-paragraph {
+    font-size: 18px;
+    color: #757575;
+    margin: 30px 0px;
+}
+.about-contents {
+    display: flex;
+    justify-content: space-around;
+}
+.item-title {
+    font-size: 20px;
+    color: #757575;
+}
+.item-txt {
+    font-size: 20px;
+    font-weight: bold;
+    color: #474747;
 }
