--- a/style/styles.css
+++ b/style/styles.css
@@ -229,3 +229,58 @@ hr {
     height: 64px;
     margin-bottom: 113px;
 }
+
+/* footer */
+
+footer {
+    max-width: 1600px;
+    max-height: 780px;
+    padding: 130px 230px;
+}
+.footer {
+    display: flex;
+    justify-content: space-around;
+}
+.left-side {
+    margin-right: 100px;
+}
+
+.footer-title {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.footer-txt {
+    font-size: 16px;
+    color: #474747;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    max-width: 562px; 
+}
+.footer-icons {
+    display: flex;
+}
+.footer-icons > a {
+    margin-right: 24px;
+}
+.footer-icons > a:hover {
+    opacity: 0.5;
+}
+.form-box {
+    width: 461px;
+    height: 64px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    padding: 18px 30px;
+    margin-bottom: 24px;
+}
+.textarea {
+    width: 461px;
+    height: 180px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    padding: 18px 30px;
+    margin-bottom: 24px;
+}
