--- a/style/styles.css
+++ b/style/styles.css
@@ -226,7 +226,7 @@ hr {
     border-radius: 5px;
     border: none;
     cursor: pointer; 
-    width: 200px;
+    max-width: 250px; 
     height: 64px;
     margin-bottom: 113px;
 }
@@ -276,6 +276,7 @@ footer {
     border: none;
     padding: 18px 30px;
     margin-bottom: 24px;
+    border-radius: 5px;
 }
 .textarea {
     width: 461px;
@@ -286,4 +287,5 @@ footer {
     border: none;
     padding: 18px 30px;
     margin-bottom: 24px;
+    border-radius: 5px;
 }
